inclui novos campos na tabela usuarios

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 db.sqlite3
+CandidatinderAPI/__pycache__/settings.cpython-39.pyc
+CandidaTinderApp/__pycache__/models.cpython-39.pyc
+CandidaTinderApp/migrations/__pycache__/0002_auto_20211005_1914.cpython-39.pyc
