--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@ db.sqlite3
 CandidatinderAPI/__pycache__/settings.cpython-39.pyc
 CandidaTinderApp/__pycache__/models.cpython-39.pyc
 CandidaTinderApp/migrations/__pycache__/0002_auto_20211005_1914.cpython-39.pyc
+CandidatinderAPI/__pycache__/__init__.cpython-39.pyc
+CandidatinderAPI/__pycache__/urls.cpython-39.pyc
+CandidatinderAPI/__pycache__/wsgi.cpython-39.pyc
+CandidaTinderApp/__pycache__/__init__.cpython-39.pyc
+CandidaTinderApp/__pycache__/admin.cpython-39.pyc
+CandidaTinderApp/__pycache__/apps.cpython-39.pyc
+CandidaTinderApp/__pycache__/serializer.cpython-39.pyc
+CandidaTinderApp/__pycache__/urls.cpython-39.pyc
+CandidaTinderApp/__pycache__/views.cpython-39.pyc
