--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ CandidaTinderApp/__pycache__/apps.cpython-39.pyc
 CandidaTinderApp/__pycache__/serializer.cpython-39.pyc
 CandidaTinderApp/__pycache__/urls.cpython-39.pyc
 CandidaTinderApp/__pycache__/views.cpython-39.pyc
+CandidaTinderApp/migrations/__pycache__/0003_auto_20211005_2050.cpython-39.pyc
