--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ CandidaTinderApp/__pycache__/serializer.cpython-39.pyc
 CandidaTinderApp/__pycache__/urls.cpython-39.pyc
 CandidaTinderApp/__pycache__/views.cpython-39.pyc
 CandidaTinderApp/migrations/__pycache__/0003_auto_20211005_2050.cpython-39.pyc
+CandidaTinderApp/migrations/__pycache__/0004_auto_20211005_2139.cpython-39.pyc
