Inclui novo campo QuantidadeParticipacoes na tabela candidatousuario

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ CandidaTinderApp/__pycache__/urls.cpython-39.pyc
 CandidaTinderApp/__pycache__/views.cpython-39.pyc
 CandidaTinderApp/migrations/__pycache__/0003_auto_20211005_2050.cpython-39.pyc
 CandidaTinderApp/migrations/__pycache__/0004_auto_20211005_2139.cpython-39.pyc
+CandidaTinderApp/migrations/__pycache__/0005_candidatousuario_quantidadeparticipacoes.cpython-39.pyc
